2008-10-05  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>

	Fix some comment typos.
	* automake.in: Fix some comment typos.
	* lib/Automake/Condition.pm: Likewise.
	* lib/Automake/DisjConditions.pm: Likewise.
	* lib/Automake/Variable.pm: Likewise.
	* lib/Automake/tests/DisjConditions.pl: Likewise.

2008-09-22  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>

	* tests/aclibobj.test: Fix race condition.

2008-09-21  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>

	Fix man page creation without installed files.
	* doc/Makefile.am (update_mans): Use wrappers in tests/
	directory.
	($(srcdir)/aclocal-$(APIVERSION).1): Use versioned wrapper as
	input program to help2man.
	($(srcdir)/automake-$(APIVERSION).1): Likewise.
	Report by Eric Blake.

2008-09-20  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>

	Remove unneeded per-rule *INSTALL variables.
	* NEWS: Update.
	* lib/am/data.am (%DIR%%PRIMARY%_INSTALL): Remove.
	(install-%DIR%%PRIMARY%): Adjust.
	* lib/am/libs.am (%DIR%LIBRARIES_INSTALL): Remove.
	(install-%DIR%LIBRARIES): Adjust.
	* lib/am/ltlibs.am (%DIR%LTLIBRARIES_INSTALL): Remove.
	(install-%DIR%LTLIBRARIES): Adjust.
	* lib/am/progs.am (%DIR%PROGRAMS_INSTALL): Remove.
	(install-%DIR%PROGRAMS): Adjust.
	* lib/am/python.am (%DIR%PYTHON_INSTALL): Remove.
	(install-%DIR%PYTHON): Adjust.
	* lib/am/scripts.am (%DIR%SCRIPT_INSTALL): Remove.
	(install-%DIR%SCRIPTS): Adjust.

	Compactify program rules using ternary operators.
	* lib/am/progs.am (install-%DIR%PROGRAMS): Uglify^WCompactify
	using ternary operators `%KEY?TRUE:FALSE%'.
	(uninstall-%DIR%PROGRAMS): Likewise.

	New doc section about command line length limits.
	* doc/automake.texi (Length limitations): New node.
	(Alternative): `nobase_' is not always equivalent to several
	base variables.
	(Install): Mention multi-file install.
	* NEWS: Expand on the issue, list some more user-visible
	consequences.

	Install nobase_lib_LTLIBRARIES before bin_PROGRAMS.
	* automake.in (generate_makefile): If nobase_lib_LTLIBRARIES are