@@ -1,5 +1,5 @@
 #! /bin/sh
-# Copyright (C) 2004  Free Software Foundation, Inc.
+# Copyright (C) 2004, 2008  Free Software Foundation, Inc.
 #
 # This program is free software; you can redistribute it and/or modify
 # it under the terms of the GNU General Public License as published by
@@ -108,5 +108,5 @@ $MAKE testdist2
 
 # Make sure aclocal diagnose missing included files with correct `file:line:'.
 rm -f b.m4
-$ACLOCAL 2>stderr && Exit 1
+$ACLOCAL 2>stderr && { cat stderr >&2; Exit 1; }
 grep 'a.m4:1:.*b.m4.*does not exist' stderr
