@@ -1,5 +1,5 @@
 #! /bin/sh
-# Copyright (C) 1998, 2001, 2002, 2004  Free Software Foundation, Inc.
+# Copyright (C) 1998, 2001, 2002, 2004, 2008  Free Software Foundation, Inc.
 #
 # This program is free software; you can redistribute it and/or modify
 # it under the terms of the GNU General Public License as published by
@@ -23,15 +23,15 @@ set -e
 $ACLOCAL --output=fred
 test -f fred
 
-$ACLOCAL --output 2>stderr && Exit 1
+$ACLOCAL --output 2>stderr && { cat stderr >&2; Exit 1; }
 grep 'option.*--output.*an argument' stderr
 grep help stderr
 
-$ACLOCAL --unknown-option 2>stderr && Exit 1
+$ACLOCAL --unknown-option 2>stderr && { cat stderr >&2; Exit 1; }
 grep 'unrecognized.*--unknown-option' stderr
 grep help stderr
 
-$ACLOCAL --ver 2>stderr && Exit 1
+$ACLOCAL --ver 2>stderr && { cat stderr >&2; Exit 1; }
 grep 'unrecognized.*--ver' stderr
 grep help stderr
 
