@@ -1,5 +1,5 @@
 #! /bin/sh
-# Copyright (C) 1998, 2001, 2002, 2003  Free Software Foundation, Inc.
+# Copyright (C) 1998, 2001, 2002, 2003, 2008  Free Software Foundation, Inc.
 #
 # This program is free software; you can redistribute it and/or modify
 # it under the terms of the GNU General Public License as published by
@@ -62,8 +62,8 @@ $AUTOMAKE
 ./configure
 
 # make distdir should fail because NEWS does not mention 1.0a
-$MAKE check 2>stderr && Exit 1
-cat stderr
+$MAKE check 2>stderr && { cat stderr >&2; Exit 1; }
+cat stderr >&2
 grep 'NEWS not updated' stderr
 test ! -f works
 
