@@ -1,5 +1,5 @@
 #! /bin/sh
-# Copyright (C) 2005, 2007  Free Software Foundation, Inc.
+# Copyright (C) 2005, 2007, 2008  Free Software Foundation, Inc.
 #
 # This program is free software; you can redistribute it and/or modify
 # it under the terms of the GNU General Public License as published by
@@ -50,7 +50,7 @@ $ACLOCAL
 $AUTOCONF
 $AUTOMAKE
 ./configure --prefix "`pwd`/inst"
-$MAKE check >stdout && Exit 1
+$MAKE check >stdout && { cat stdout; Exit 1; }
 cat stdout
 grep 'FAIL: fail.sh' stdout
 grep 'PASS: ok.sh' stdout && Exit 1
