@@ -105,11 +105,11 @@ AM_COLOR_TESTS=always $MAKE -e check >stdout && { cat stdout; Exit 1; }
 cat stdout
 test_color
 
-MAKE=$MAKE expect -f expect-make >stdout || Exit 77
+MAKE=$MAKE expect -f expect-make >stdout || { cat stdout; Exit 77; }
 cat stdout
 test_color
 
-AM_COLOR_TESTS=no MAKE=$MAKE expect -f expect-make >stdout || Exit 77
+AM_COLOR_TESTS=no MAKE=$MAKE expect -f expect-make >stdout || { cat stdout; Exit 77; }
 cat stdout
 test_no_color
 :
