@@ -1,5 +1,5 @@
 #! /bin/sh
-# Copyright (C) 2004  Free Software Foundation, Inc.
+# Copyright (C) 2004, 2008  Free Software Foundation, Inc.
 #
 # This program is free software; you can redistribute it and/or modify
 # it under the terms of the GNU General Public License as published by
@@ -47,8 +47,8 @@ do
   touch x
 done) || Exit 77
 
-$MAKE dist 2>stderr && Exit 1
-cat stderr
+$MAKE dist 2>stderr && { cat stderr >&2; Exit 1; }
+cat stderr >&2
 grep 'filenames are too long' stderr
 test 2 = `grep 12345678 stderr | wc -l`
 :
