@@ -1,5 +1,5 @@
 #! /bin/sh
-# Copyright (C) 2006  Free Software Foundation, Inc.
+# Copyright (C) 2006, 2008  Free Software Foundation, Inc.
 #
 # This program is free software; you can redistribute it and/or modify
 # it under the terms of the GNU General Public License as published by
@@ -27,7 +27,7 @@ AM_INIT_AUTOMAKE
 END
 
 # The error message should mension AC_INIT, not AC_PACKAGE_VERSION.
-($ACLOCAL && $AUTOCONF) 2>stderr && Exit 1
-cat stderr
+($ACLOCAL && $AUTOCONF) 2>stderr && { cat stderr >&2; Exit 1; }
+cat stderr >&2
 grep AC_PACKAGE_VERSION stderr && Exit 1
 grep AC_INIT stderr
