@@ -1,5 +1,5 @@
 #! /bin/sh
-# Copyright (C) 2004  Free Software Foundation, Inc.
+# Copyright (C) 2004, 2008  Free Software Foundation, Inc.
 #
 # This program is free software; you can redistribute it and/or modify
 # it under the terms of the GNU General Public License as published by
@@ -22,24 +22,24 @@ set -e
 
 # b7cb8259 assumed not to exist.
 
-./missing b7cb8259 --version 2>stderr && Exit 1
+./missing b7cb8259 --version 2>stderr && { cat stderr >&2; Exit 1; }
 grep . stderr && Exit 1
-./missing b7cb8259 --grep 2>stderr && Exit 1
+./missing b7cb8259 --grep 2>stderr && { cat stderr >&2; Exit 1; }
 grep WARNING stderr
 
 ./missing --run b7cb8259 --version && Exit 1
-./missing --run b7cb8259 --grep 2>stderr && Exit 1
+./missing --run b7cb8259 --grep 2>stderr && { cat stderr >&2; Exit 1; }
 grep WARNING stderr
 
 # missing itself it known to exist :)
 
-./missing ./missing --version 2>stderr && Exit 1
+./missing ./missing --version 2>stderr && { cat stderr >&2; Exit 1; }
 grep . stderr && Exit 1
-./missing ./missing --grep 2>stderr && Exit 1
+./missing ./missing --grep 2>stderr && { cat stderr >&2; Exit 1; }
 grep WARNING stderr
 
 ./missing --run ./missing --version 2>stderr
 grep . stderr && Exit 1
-./missing --run ./missing --grep 2>stderr && Exit 1
+./missing --run ./missing --grep 2>stderr && { cat stderr >&2; Exit 1; }
 grep WARNING stderr && Exit 1
 grep Unknown stderr
