@@ -1,5 +1,5 @@
 #! /bin/sh
-# Copyright (C) 2004, 2006  Free Software Foundation, Inc.
+# Copyright (C) 2004, 2006, 2008  Free Software Foundation, Inc.
 #
 # This program is free software; you can redistribute it and/or modify
 # it under the terms of the GNU General Public License as published by
@@ -35,9 +35,9 @@ EOF
 $ACLOCAL
 $AUTOCONF
 
-./configure >stdout 2>stderr && Exit 1
+./configure >stdout 2>stderr && { cat stdout; cat stderr >&2; Exit 1; }
 cat stdout
-cat stderr
+cat stderr >&2
 grep 'checking for IShouldNotExist1' stdout
 grep 'checking for IShouldNotExist2' stdout
 grep 'no suitable Python interpreter found' stderr
@@ -50,6 +50,6 @@ $AUTOCONF
 ./configure
 
 # Any user setting should be used.
-./configure PYTHON=foo >stdout && Exit 1
+./configure PYTHON=foo >stdout && { cat stdout; Exit 1; }
 cat stdout
 grep 'PYTHON = foo' stdout
