@@ -1,5 +1,5 @@
 #! /bin/sh
-# Copyright (C) 1998, 2002, 2003  Free Software Foundation, Inc.
+# Copyright (C) 1998, 2002, 2003, 2008  Free Software Foundation, Inc.
 #
 # This program is free software; you can redistribute it and/or modify
 # it under the terms of the GNU General Public License as published by
@@ -29,5 +29,5 @@ AC_DEFUN([MACRO_1_2], echo 12)
 AC_DEFUN([MACRO_1_2_3], echo 123)
 END
 
-$ACLOCAL 2> output || Exit 1
-test -z "`cat output`"
+$ACLOCAL 2> stderr || { cat stderr >&2; Exit 1; }
+test -z "`cat stderr`"
