@@ -1,5 +1,16 @@
 2008-10-05  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>
 
+	Print captured output before failing.
+	* tests/acloca14.test, tests/acloca17.test, tests/acloca18.test,
+	tests/aclocal.test, tests/acsilent.test, tests/alpha.test,
+	tests/check4.test, tests/color.test, tests/fn99.test,
+	tests/fn99subdir.test, tests/help.test, tests/init.test,
+	tests/lisp8.test, tests/missing3.test, tests/pr220.test,
+	tests/python11.test, tests/python4.test, tests/python5.test,
+	tests/unused.test, tests/version8.test: When Exit is called
+	after a command that has stdout or stderr redirected to a file
+	for later inspection, output the file before failing the test.
+
 	Fix some comment typos.
 	* automake.in: Fix some comment typos.
 	* lib/Automake/Condition.pm: Likewise.
